cabal-version:      2.4
name:               door-controller
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             s-exp
maintainer:         @s-exp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable door-controller
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    --other-modules: Hardware.Servo, Door, I2CDevice 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    binary, bytestring, HPi,base ^>=4.15.1.0
    hs-source-dirs:   app 
    default-language: Haskell2010
